# ChangeLog for app-emacs/calc
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-emacs/calc/Attic/ChangeLog,v 1.6 2007/12/01 01:02:34 ulm Exp $

  30 Nov 2007; Ulrich Mueller <ulm@gentoo.org> calc-2.02f.ebuild:
  Move message to pkg_setup, so that it is also seen if build fails.

  27 Oct 2007; Christian Faulhammer <opfer@gentoo.org> calc-2.02f.ebuild:
  stable x86, bug 197184

  27 Oct 2007; Ulrich Mueller <ulm@gentoo.org> calc-2.02f.ebuild:
  amd64 stable, bug 197184

  27 Oct 2007; Ulrich Mueller <ulm@gentoo.org> files/50calc-gentoo.el,
  calc-2.02f.ebuild:
  Deactivate calc for Emacs 22 where it is already included. Output a
  corresponding message in pkg_postinst. Add die commands in src_install.

  04 Jul 2007; Christian Faulhammer <opfer@gentoo.org> calc-2.02f.ebuild:
  added some quotes; added die comment

  10 Dec 2006; Peter Weller <welp@gentoo.org> calc-2.02f.ebuild:
  Added ~amd64 keyword wrt bug #127269

*calc-2.02f (05 Mar 2006)

  05 Mar 2006; Matthew Kennedy <mkennedy@gentoo.org>
  +files/calc-2.02f-emacs-21.patch, +files/50calc-gentoo.el,
  +files/calc-2.02f-info-dir.patch, +calc-2.02f.ebuild:
  Initial port. Ebuild contributed by Ulrich Mueller <ulm@kph.uni-mainz.de>;
  Resolves Bug #124076.
