@@ -5,13 +5,13 @@ AUX 50calc-gentoo.el 941 RMD160 0d5aeaea22d9c8b2f72a4ca34c4819a35d466afd SHA1 db
 AUX calc-2.02f-emacs-21.patch 8642 RMD160 1915e1f5f571b92d9cc67ced09085b7a862155e5 SHA1 50c38fbbfa3112bded1ace696fcce942dfdc7d90 SHA256 9c5fd5b410a43c0586a46b69c8f81e4f1ee372291bf76e9c37067bd6f4b68b59
 AUX calc-2.02f-info-dir.patch 301 RMD160 56a619a319f036ccbbc5fc8f21a8380b807cf68e SHA1 3f8e5242b93a598bcb453ac3c09e678df99a9299 SHA256 cac6ee1a91324f2001c1d991bb7b9bba24ae6eae36ee554fbbc9e252fdbabbaf
 DIST calc-2.02f.tar.gz 831865 RMD160 4ca65723de4a5c3f8ebb3c61191185b48ddb1009 SHA1 1a1d54fb90725aacaf1c9308a94be4b813ac4880 SHA256 774231cdf06999d3a7cbfae69a1afe469497a6bc7d2e6cb90de922dd3ae5e67d
-EBUILD calc-2.02f.ebuild 1306 RMD160 32235a3c42473d5feedbe8cd72975b197f551451 SHA1 7be6aa5b95cb6be7da7487fceee9466c0b1f3555 SHA256 f9beb19778dcb0030bbed696c679b245ebc994cfa47ed19b455ef502b79f48a3
-MISC ChangeLog 1283 RMD160 916676df937ea8dcb26b6cd7a2a2f6305e0cc69a SHA1 3b396975d90d9c15388545c57cf7bc0e535f205c SHA256 753816b2ca6d92fba73a950ad99787030f0f3bdca522897297e6ec8c659fe2d9
+EBUILD calc-2.02f.ebuild 1229 RMD160 0e440db6214470137a88a38339086e46aa45502e SHA1 42e0dfd08be7f9c5b584af1e480894c68e80d506 SHA256 150f7f25dcf115180983f51e11ae877d1218abf00a5985506ae8c9778bb328c2
+MISC ChangeLog 1391 RMD160 0adf7007ff4ca12cc73079e494e7ee4bd1c30dee SHA1 72d4356cbbffd42aabf18b1c2a20ac6edd7fdc6d SHA256 6f8f40e9b8fe1262e382776d375fd3d71812d447ef523e3c4f4dc63e04100e1e
 MISC metadata.xml 1515 RMD160 b82c1d081fecab8d22e6303b719d8003660a4d79 SHA1 9890c29254cdf634d4ebac0856521068dd2c2173 SHA256 185ba60afb4cb0b53abbd53268adf38bd73c9ff58b74dbecfea11fd0542e411e
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v1.4.8 (GNU/Linux)
+Version: GnuPG v1.4.9 (GNU/Linux)
 
-iEYEARECAAYFAkfk5/UACgkQOeoy/oIi7ux/jwCfYRMovLpgRdaU/bcoUlR3qtai
-ANYAn1NxybUtMvpMUouQro9eMy2vodhL
-=YBFX
+iEYEARECAAYFAknP5YIACgkQOeoy/oIi7uyOCwCaAvRhfA4geig4x7HJYPqZ65mM
+8AAAoKLW9KfJXbPXhgz8rBaBxEmpzwfH
+=dG8+
 -----END PGP SIGNATURE-----
