@@ -1,6 +1,9 @@
 # ChangeLog for app-emacs/calc
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-emacs/calc/Attic/ChangeLog,v 1.6 2007/12/01 01:02:34 ulm Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-emacs/calc/Attic/ChangeLog,v 1.7 2009/03/29 21:16:30 ulm Exp $
+
+  29 Mar 2009; Ulrich Mueller <ulm@gentoo.org> calc-2.02f.ebuild:
+  Use autopatch feature of elisp.eclass.
 
   30 Nov 2007; Ulrich Mueller <ulm@gentoo.org> calc-2.02f.ebuild:
   Move message to pkg_setup, so that it is also seen if build fails.
